# Code-Rag

./: .gitignore  README.md  backend.py  hello.py  pyproject.toml  requirements.txt
coderag/: agent.py  backend.py  globals.py  main.py
coderag/embedding/: delete_namespace.py  embedd.py  summarizer.py  utility.py
coderag/new_tools/: base.py  read_file.py
coderag/tools/: helper.py  modify.py  modify_code_file.py  modify_code_snippet.py  read.py  read_code_snippet.py  search.py  write.py  write_new_file.py
coderag/uploaded_files/3423424sdds/: Collaborators.py
coderag/uploaded_files/3423424sdds/Gradio/: Gradio.py
coderag/utils/: parser.py  prompts.py  text_editor.py
files/: Gradio.py  my_hand_mouse.py  my_hand_mouse_utils.py
frontend/: index.html  package-lock.json  package.json
frontend 2/: package-lock.json  package.json
frontend 4/: index.html  package.json
frontend 4/src/Hooks/: useFolderUpload.js  useLLMChatService.js
frontend 4/src/pages/: canvasPage.jsx  canvasPage.module.css  chatPage.jsx
frontend 5/: package-lock.json  package.json
frontend 5/src/: App.jsx
frontend 5/src/Hooks/: useFolderUpload.js  useLLMChatService.js
frontend 5/src/pages/: CanvasPage.module.css  canvasPage.jsx  chatPage.jsx  chatPage.module.css
frontend/src/: App.jsx  index.css
frontend/src/Hooks/: useFolderUpload.js  useLLMChatService.js
frontend/src/pages/: canvasPage.module.css  chatPage.jsx
uploaded_files/2f25c02e-d76d-4fe4-b8dd-c3a32da412bb/pages/: canvasPage.module.css
uploaded_files/49a0ea13-e7b6-4906-9a99-b8feca7c00de/pages/: chatPage.jsx
(+39 files in other folders)
