[project]
name = "coderag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.46.0",
    "chromadb>=0.6.3",
    "colbert-ai>=0.2.21",
    "rerankers>=0.8.0",
    "sentence-transformers>=3.4.1",
    "turbopuffer>=0.1.32",
]
